# exif-decorator

./: CMakeLists.txt  README.md
include/: ContentManager.hpp  ExifExtractor.hpp
src/: ContentManager.cpp  ExifExtractor.cpp  main.cpp
ui/html/: main.html
ui/scripts/: PhotoSelector.js
ui/stylesheets/: styles.css
